welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:4: error: ';' expected but 'if' found.
  }if else(you>=8 || date>=8){
   ^